apps/apacheCXF/kubernetes/service.yaml
##################################################################################################
# apachecxf course replay services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: apachecxf-replay
  namespace: apachecxf
  labels:
    app: apachecxf
    component: course-replay
spec:
  ports:
  - port: 8080
    targetPort: 8084
    name: http
  selector:
    component: course-replay
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: course-replay
  namespace: apachecxf
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apachecxf
        component: course-replay
        version: v1
        namespace: apachecxf
    spec:
      containers:
      - name: course
        image: cubeiocorp/cxf-course-service:pm-080420-1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: apachecxf-record
  namespace: apachecxf
  labels:
    app: apachecxf
    component: course-record
spec:
  ports:
  - port: 8080
    targetPort: 8084
    name: http
  selector:
    component: course-record
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: course-record
  namespace: apachecxf
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apachecxf
        component: course-record
        version: v1
        namespace: apachecxf
    spec:
      containers:
      - name: course
        image: cubeiocorp/jersy_1_19_emp:v1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: student
  namespace: apachecxf
  labels:
    app: apachecxf
    component: student
spec:
  ports:
  - port: 8080
    targetPort: 8085
    name: http
  selector:
    component: student
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: student
  namespace: apachecxf
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: apachecxf
        component: student
        version: v1
        namespace: apachecxf
    spec:
      containers:
      - name: student
        image: cubeiocorp/cxf-student-service:pm-300320-1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8085
